# SFML_discovery

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_all.sh
.github/workflows/: build.yml
docker/: Dockerfile.linux  Dockerfile.windows
include/: AAction.hpp  Animation.hpp  Arrow.hpp  Character.hpp  Game.hpp  Idle.hpp  Map.hpp  Move.hpp  utils.hpp
maps/: big  small
src/: AAction.cpp  Animation.cpp  Arrow.cpp  Character.cpp  Game.cpp  Idle.cpp  Map.cpp  Move.cpp  main.cpp  utils.cpp
